[project]
name = "fiverr-mekvox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "anyio>=4.12.1",
    "apscheduler>=3.11.2",
    "cachetools>=7.0.1",
    "exceptiongroup>=1.3.1",
    "httpx>=0.28.1",
    "python-amazon-paapi>=6.1.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
]
